infra/k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sre
  labels:
    name: sre
    team: sre
    managed-by: kubectl
